crates/otter-vm/tests/compile_fail/native_ctx_heap_mut_rejected.rs
fn native(ctx: &mut otter_vm::NativeCtx<'_>) {
    let _ = ctx.heap_mut();
}

fn main() {}
